--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>the snake game</h1>
+    <h1>the Snake game</h1>
     <canvas class="canvas" width="600" height="400"></canvas>
   <div id="game-over">Game Over!  Your score: <span id="final-score"></span></div>
   <div id="score">Score: <span id="current-score">0</span></div>
